syntax = "proto3";

message GeneralInstructions{
    enum MainInstrEnum{
        // Just sending over a test General Instruction
        DO_NOTHING = 0; 

        // Telling microcontroller to reboot. 
        REBOOT = 1; 
        
        // Telling microcontroller to find and clear out any free memory. 
        FREE_MEM = 2; 
        
        // Telling the microcontroller that you want to flash the LED. 
        FLASH_LED = 3; 

        // Tells microcontroller to flash green
        FLASH_GREEN = 4; 

        // Tells microcontroller to flash blue 
        FLASH_BLUE = 5;
    }
    // Actual Packaged Data
    MainInstrEnum main_instructions = 1; 
}